# CodingChallenges

./: .gitignore  CMakeLists.txt  README.md  main.cpp  time.cpp
Algorithm_Implementation/Code/: quick_sort.py
Algorithm_Implementation/Notes/: big_o_notation  graphs
Algorithms/Bits/: power_of_2.py  terminology
Algorithms/DP/: bitmask.cpp  box_stacking.py  bridge_crossing.cpp  coindp.cpp  coindp.py  dup_knapsack.cpp  fib.cpp  lcs.cpp
Algorithms/Etc./: 2sum.py  nse.py
Algorithms/Graphs/: Bipartite.cpp  DSU.cpp  articulation_points.cpp  bfs.cpp  bridges.cpp  cycle_detect.cpp  dfs.cpp  dfs.py  kruskal_dsu.cpp  quick_find.cpp  shortest_path.py
Algorithms/RangeQueries/: psa.py
Algorithms/Recursion/: count_BST.cpp  fact.cpp  fib.cpp  lcs.cpp
Algorithms/Sorting_searching/: binary_search.cpp
Algorithms/Strings/: hash.cpp  poly_hash.cpp  preprocessing.cpp  substring_bf.cpp  substring_bf.py  terminology
Algorithms/bit_manipulation/: test_power_of_2.py
Algorithms/math/: quick_exponentiation  quick_exponentiation.cpp  quick_exponentiation.py
DMOJ/: bankNotes.py
DMOJ/Random/: 4everv2.py  Unlucky_Numbers.py  a_minus-b.py  ioi1102.py  letter_frequency.py
DataStructures/linked_list/: linked_list.cpp
Data_Structures/: 2dpsa.cpp  difference-array.cpp
Easy/: single_number.py
Hard/: couting_letters.py
Medium/: bracket_generator.py  combination_sum.py  combinations_of_phone_number.py  hockey_stick_indentity.py
Templates/: quick_template.cpp
challenge_problems/: README.md
template/: advanced_debug.cpp  quick_template.cpp  template.h
templates/: BIT.cpp
(+143 files in other folders)
